@@ -24,7 +24,6 @@
 #include "autocorrect/AutoCorrect.hpp"
 #include <cstring>
 #include <cstdlib>
-#include <cwctype>
 
 using namespace libvoikko::grammar;
 using namespace libvoikko::autocorrect;
